@@ -51,6 +51,10 @@
 #include <net/uip/uip-arch.h>
 #include <netinet/ether.h>
 
+#ifdef CONFIG_NET_STATISTICS
+#include <net/uip/uip.h>
+#endif
+
 #include "nsh.h"
 
 /****************************************************************************
@@ -78,6 +82,119 @@
  ****************************************************************************/
 
 /****************************************************************************
+ * Name: uip_statistics
+ ****************************************************************************/
+
+#ifdef CONFIG_NET_STATISTICS
+static inline void uip_statistics(void *handle)
+{
+  nsh_output(handle, "uIP         IP ");
+#ifdef CONFIG_NET_TCP
+  nsh_output(handle, "  TCP");
+#endif
+#ifdef CONFIG_NET_UDP
+  nsh_output(handle, "  UDP");
+#endif
+#ifdef CONFIG_NET_ICMP
+  nsh_output(handle, "  ICMP");
+#endif
+  nsh_output(handle, "\n");
+
+  /* Received packets */
+
+  nsh_output(handle, "Received    %04x",uip_stat.ip.recv);
+#ifdef CONFIG_NET_TCP
+  nsh_output(handle, " %04x",uip_stat.tcp.recv);
+#endif
+#ifdef CONFIG_NET_UDP
+  nsh_output(handle, " %04x",uip_stat.udp.recv);
+#endif
+#ifdef CONFIG_NET_ICMP
+  nsh_output(handle, " %04x",uip_stat.icmp.recv);
+#endif
+  nsh_output(handle, "\n");
+
+  /* Dropped packets */
+
+  nsh_output(handle, "Dropped     %04x",uip_stat.ip.drop);
+#ifdef CONFIG_NET_TCP
+  nsh_output(handle, " %04x",uip_stat.tcp.drop);
+#endif
+#ifdef CONFIG_NET_UDP
+  nsh_output(handle, " %04x",uip_stat.udp.drop);
+#endif
+#ifdef CONFIG_NET_ICMP
+  nsh_output(handle, " %04x",uip_stat.icmp.drop);
+#endif
+  nsh_output(handle, "\n");
+
+  nsh_output(handle, "  IP        VHL: %04x HBL: %04x\n",
+             uip_stat.ip.vhlerr, uip_stat.ip.hblenerr);
+  nsh_output(handle, "            LBL: %04x Frg: %04x\n",
+             uip_stat.ip.lblenerr, uip_stat.ip.fragerr);
+
+  nsh_output(handle, "  Checksum  %04x",uip_stat.ip.chkerr);
+#ifdef CONFIG_NET_TCP
+  nsh_output(handle, " %04x",uip_stat.tcp.chkerr);
+#endif
+#ifdef CONFIG_NET_UDP
+  nsh_output(handle, " %04x",uip_stat.udp.chkerr);
+#endif
+#ifdef CONFIG_NET_ICMP
+  nsh_output(handle, " ----");
+#endif
+  nsh_output(handle, "\n");
+
+#ifdef CONFIG_NET_TCP
+  nsh_output(handle, "  TCP       ACK: %04x SYN: %04x\n", 
+            uip_stat.tcp.ackerr, uip_stat.tcp.syndrop);
+  nsh_output(handle, "            RST: %04x %04x\n", 
+            uip_stat.tcp.rst, uip_stat.tcp.synrst);
+#endif
+
+  nsh_output(handle, "  Type      %04x",uip_stat.ip.protoerr);
+#ifdef CONFIG_NET_TCP
+  nsh_output(handle, " ----");
+#endif
+#ifdef CONFIG_NET_UDP
+  nsh_output(handle, " ----");
+#endif
+#ifdef CONFIG_NET_ICMP
+  nsh_output(handle, " %04x",uip_stat.icmp.typeerr);
+#endif
+  nsh_output(handle, "\n");
+
+  /* Sent packets */
+
+  nsh_output(handle, "Sent        ----",uip_stat.ip.sent);
+#ifdef CONFIG_NET_TCP
+  nsh_output(handle, " %04x",uip_stat.tcp.sent);
+#endif
+#ifdef CONFIG_NET_UDP
+  nsh_output(handle, " %04x",uip_stat.udp.sent);
+#endif
+#ifdef CONFIG_NET_ICMP
+  nsh_output(handle, " %04x",uip_stat.icmp.sent);
+#endif
+  nsh_output(handle, "\n");
+
+#ifdef CONFIG_NET_TCP
+  nsh_output(handle, "  Rexmit    ---- %04x",uip_stat.tcp.rexmit);
+#ifdef CONFIG_NET_UDP
+  nsh_output(handle, " ----");
+#endif
+#ifdef CONFIG_NET_ICMP
+   nsh_output(handle, " ----");
+#endif
+  nsh_output(handle, "\n");
+#endif
+  nsh_output(handle, "\n");
+}
+#else
+# define uip_statistics(handle)
+#endif
+
+/****************************************************************************
  * Name: ifconfig_callback
  ****************************************************************************/
 
@@ -91,7 +208,7 @@ int ifconfig_callback(FAR struct uip_driver_s *dev, void *arg)
   addr.s_addr = dev->d_draddr;
   nsh_output(arg, "DRaddr:%s ", inet_ntoa(addr));
   addr.s_addr = dev->d_netmask;
-  nsh_output(arg, "Mask:%s\n", inet_ntoa(addr));
+  nsh_output(arg, "Mask:%s\n\n", inet_ntoa(addr));
 }
 
 /****************************************************************************
@@ -105,6 +222,7 @@ int ifconfig_callback(FAR struct uip_driver_s *dev, void *arg)
 void cmd_ifconfig(FAR void *handle, int argc, char **argv)
 {
   netdev_foreach(ifconfig_callback, handle);
+  uip_statistics(handle);
 }
 
 #endif /* CONFIG_NET && CONFIG_NSOCKET_DESCRIPTORS */
